fixed columns on small screens

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -80,7 +80,7 @@ html, body {
     color: #fff;
 }
 
-.col-sm-2 {
+.col-md-2, .col-lg-2, .col-6 {
     padding: 5px;
 }
 
@@ -89,14 +89,30 @@ html, body {
     text-align: center;
 }
 
-
-.card {
-    /* background: radial-gradient(ellipse at bottom, #415866 0%, #353c4e 100%); */
-    background:#101516;
+.container-fluid {
+    text-align: center;
 }
 
 
+.card {
+    background:#101516;
+}
 
+.card-header {
+    padding: 0;
+    font-size: small;
+}
+
+.card-body {
+    padding: 0;
+}
+
+.card-body p {
+    margin-bottom: 0;
+    margin-top: 2px;
+    font-size: small; 
+    font-weight: bold;
+}
 
 form {
     /* padding: 5px; */
@@ -250,9 +266,9 @@ h4, h5, h6 {
   }
 
   .logo {
-      max-height: 40px;
-      max-width: 40px;
-      border-radius: 10px;
+      max-height: 30px;
+      max-width: 30px;
+      border-radius: 5px;
   }
 
 
@@ -308,6 +324,7 @@ h4, h5, h6 {
     border-radius: 5px;
     border: none;
     display: inline-block;
+    margin-bottom: 2px;
     
 }
 
